Changes on style and media querie

--- a/styles/style.css
+++ b/styles/style.css
@@ -32,12 +32,14 @@ header {
 }
 header span {
   color: rgba(0, 0, 0, 0.5);
-  font-size: 1.5rem;
+  font-size: 1.6rem;
 }
 header h1 {
   color: var(--VeryDarkBlue);
-  font-size: 1.55rem;
+  font-size: 1.6rem;
+  padding-left: 1px;
   margin-bottom: 15px;
+  font-weight: 600;
 }
 header p {
   color: var(--GrayishBlue);
