--- a/styles/mq1.css
+++ b/styles/mq1.css
@@ -7,9 +7,12 @@ header {
 }
 header span {
   font-size: 2.8rem;
+  font-weight: 300;
 }
 header h1 {
   font-size: 2.9rem;
+  font-weight: 600;
+  padding-left: 1px;
 }
 header p {
   padding: 0 30px;
@@ -27,40 +30,66 @@ main img {
   margin: auto;
 }
 
-@media screen and (min-width: 1244px) {
+@media screen and (min-width: 992px) {
   body {
     display: flex;
     flex-direction: column;
     height: 100vh;
-  }
-  div#content {
-    width: 1244px;
   }
   header {
     margin: auto;
     width: 650px;
     margin-bottom: 60px;
   }
+  header p {
+    font-size: 1.1rem;
+  }
   main {
-    max-width: 1244px;
-    display: flex;
-    align-items: center;
+    display: grid;
     justify-content: center;
-    flex-flow: row wrap;
-    text-align: left;
-    gap: 1rem;
+    grid-template-columns: repeat(4, 160px);
+    grid-template-areas: "supervisor . teamB . calculator" "    .      . karma .      .    ";
+  }
+  main h2 {
+    font-size: 1.5rem;
+  }
+  main div.cards:nth-child(1) {
+    grid-area: supervisor;
+  }
+  main div.cards:nth-child(2) {
+    grid-area: teamB;
+  }
+  main div.cards:nth-child(3) {
+    grid-area: karma;
+  }
+  main div.cards:nth-child(4) {
+    grid-area: calculator;
+  }
+  main div.cards:nth-child(1),
+  main div.cards:nth-child(4) {
+    transform: translateY(50%);
   }
   main div.cards {
-    width: 400px;
-  }
-  main div.cards img {
-    margin-right: 0;
-  }
-  main div.cards:nth-child(odd) {
-    transform: translateY(50%);
+    width: 300px;
   }
   footer {
     margin-top: auto;
+  }
+}
+@media screen and (min-width: 1244px) {
+  main {
+    grid-template-columns: repeat(4, 205px);
+    text-align: left;
+  }
+  main img {
+    margin-right: 0;
+  }
+  main div.cards {
+    width: 390px;
+    padding-left: 30px;
+  }
+  main div.cards h2 {
+    padding-bottom: 0px;
   }
 }
 
