--- a/styles/mq1.scss
+++ b/styles/mq1.scss
@@ -7,20 +7,25 @@ header {
 
    span {
       font-size: 2.8rem;
+      font-weight: 300;
    }
 
    h1 {
       font-size: 2.9rem;
+      font-weight: 600;
+      padding-left: 1px;
    }
 
    p {
       padding: 0 30px;
       font-size: 1.2rem;
+
    }
 }
 
 main {
    text-align: center;
+
    h2 {
       font-size: 2rem;
       padding-bottom: 20px;
@@ -32,50 +37,87 @@ main {
 }
 
 
-@media screen and (min-width: 1244px) {
+
+@media screen and (min-width: 992px) {
    body {
       display: flex;
       flex-direction: column;
       height: 100vh;
    }
 
-
-
-   div#content {
-      width: 1244px;
-   }
-
    header {
       margin: auto;
       width: 650px;
       margin-bottom: 60px;
+
+      p {
+         font-size: 1.1rem;
+      }
    }
 
    main {
-      max-width: 1244px;
-      display: flex;
-      align-items: center;
+      display: grid;
       justify-content: center;
-      flex-flow: row wrap;
-      text-align: left;
-      gap: 1rem;
+      grid-template-columns: repeat(4, 160px);
+      grid-template-areas:
+         "supervisor . teamB . calculator"
+         "    .      . karma .      .    "
+      ;
 
-      div.cards {
-         width: 400px;
-
-         img {
-            margin-right: 0; 
-         }
+      h2 {
+         font-size: 1.5rem;
       }
 
-      div.cards:nth-child(odd) {
+      div.cards:nth-child(1) {
+         grid-area: supervisor;
+      }
+
+      div.cards:nth-child(2) {
+         grid-area: teamB;
+      }
+
+      div.cards:nth-child(3) {
+         grid-area: karma;
+      }
+
+      div.cards:nth-child(4) {
+         grid-area: calculator;
+      }
+
+      div.cards:nth-child(1),
+      div.cards:nth-child(4) {
          transform: translateY(50%);
       }
+
+      div.cards {
+         width: 300px;
+      }
    }
-   
-   
-   
+
    footer {
       margin-top: auto;
    }
+}
+
+
+
+@media screen and (min-width: 1244px) {
+   main {
+      grid-template-columns: repeat(4, 205px);
+      text-align: left;
+
+      img {
+         margin-right: 0;
+      }
+
+      div.cards {
+         width: 390px;
+         padding-left: 30px;
+
+         h2 {
+            padding-bottom: 0px;
+         }
+      }
+   }
+
 }
