--- a/styles/style.scss
+++ b/styles/style.scss
@@ -33,13 +33,15 @@ header {
 
    span {
       color: rgba(0, 0, 0, 0.5);
-      font-size: 1.5rem;
+      font-size: 1.6rem;
    }
 
    h1 {
       color: var(--VeryDarkBlue);
-      font-size: 1.55rem;
+      font-size: 1.6rem;
+      padding-left: 1px;
       margin-bottom: 15px;
+      font-weight: 600;
    }
 
    p {
